CostalCloud/force-app/main/default/objects/Invoices_Payments__c.object
<CustomObject>
    <label>Invoice/Payment</label>
    <nameField>
        <label>Invoices/Payment Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices/Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>