CostalCloud/force-app/main/default/objects/Invoices_Payments__c/fields/Installer_Account__c.field-meta.xml
<CustomField>
    <fullName>Installer_Account__c</fullName>
    <label>Installer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Installer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices/Payments</relationshipLabel>
    <relationshipName>Invoices_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>