CostalCloud/force-app/main/default/objects/Invoices_Payments__c/fields/IntactIntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntactIntegrationKey__c</fullName>
    <externalId>true</externalId>
    <label>IntactIntegrationKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>