CostalCloud/force-app/main/default/objects/Invoices_Payments__c/fields/Invoice_Payment_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice/Payment ID(18)</label>
    <type>Text</type>
</CustomField>