CostalCloud/force-app/main/default/objects/Invoices_Payments__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Invoices/Payments</relationshipLabel>
    <relationshipName>Invoices_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>